compiler/testData/diagnostics/tests/typealias/typeAliasInvisibleObject.fir.kt
class C {
    private companion object
}

typealias CAlias = C

konst <!EXPOSED_PROPERTY_TYPE!>test1<!> = CAlias
konst <!EXPOSED_PROPERTY_TYPE!>test1a<!> = C